# immutablecollections

./: .coveragerc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  __init__.py  appveyor.yml  immutablecollection.py  immutablecollections.pyi  immutabledict.py  immutablelist.py  immutablemultidict.py  immutableset.c  immutableset.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_immutabledict.py  test_immutablelist.py  test_immutablemultidict.py  test_immutableset.py  test_utils.py
.github/: pull_request_template
benchmarks/: test_benchmark_immutablelist.py  test_benchmark_immutableset.py  test_benchmark_serialization.py
c-implementation/: LICENSE  immutableset.c  setup.py
c-implementation/tests/: TestImmutableSet.py
immutablecollections/: __init__.py  _immutabledict.py  _immutablelist.py  _immutablemultidict.py  _immutableset.py  _utils.py  converter_utils.py  immutablecollection.py  immutabledict.py  immutablelist.py  immutablemultidict.py  immutableset.py  utils.py  version.py
immutablecollections/newsfragments/: 23.bugfix  25.feature  29.feature  33.feature  35.bugfix  42.breaking  6.feature  61.feature  75.feature  8.feature
newsfragments/: 76.feature
tests/: TestImmutableSet.py  test_immutabledict.py  test_immutablelist.py  test_immutablemultidict.py  test_immutableset.py  test_utils.py
